external-crates/move/crates/move-compiler/tests/move_check/parser/byte_string_token_eof2.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/byte_string_token_eof2.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/byte_string_token_eof2.move:3:9
  │
3 │         b"Diem
  │         ^^^^^^ Missing closing quote (") after byte string

